# LLMHIVE

./: .env  .env.certification.template  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  .vercelignore  ADAPTIVE_ENSEMBLE_IMPLEMENTATION_COMPLETE.md  ADVANCED_REASONING_IMPLEMENTATION.md  ANSWER_FORMATTING_IMPLEMENTATION.md  API_KEY_SECURITY_IMPLEMENTATION.md  AUTOMATIC_FORMAT_SELECTION.md  BACKEND_IDENTIFICATION_GUIDE.md  CHAT_ERROR_FIXED.md  CI_CD.md  CLARIFICATION_LOOP_IMPLEMENTATION.md  CLEAN_SLATE_SUMMARY.md  CLOSE_BUTTON_FINAL_FIX.md  CLOUDBUILD_DEPLOYMENT_FIX_COMPLETE.md  CLOUD_RUN_IMPORT_VERIFICATION.md  CODE_REVIEW_REPORT.md  COMPLETE_BUILD_SUMMARY.md  COMPLETE_FEATURE_LIST.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PROJECT_STATUS.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CONVERSATION_SYNC_FIX.md  DEEPCONF_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.production  EMAIL_STANDARDIZATION_REPORT.md  ENABLE_REAL_PROVIDERS.md  (+126 more)
Programing/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Programing/alembic/: env.py  script.py.mako
Programing/alembic/versions/: 202309201200_init_db.py  20240101_000001_init_db.py
Programing/app/: __init__.py  config.py  database.py  main.py  model_selector.py  models.py  orchestrator.py  roles.py  scratchpad.py  validator.py
Programing/app/api/: __init__.py  routes.py
Programing/deploy/cloudrun/terraform/: env.example.auto.tfvars  main.tf  outputs.tf  variables.tf
Programing/deploy/helm/llmhive/: Chart.yaml  values-prod.yaml  (+1 more)
Programing/tests/: conftest.py  test_model_selector.py  test_orchestrator.py  test_roles.py  test_scratchpad.py  test_validator.py
llmhive/: .env.example  .gcloudignore  CHANGELOG_STAGE4_HARDENING.md  DEPLOYMENT.md  Dockerfile  Dockerfile_unused  MCP2_IMPLEMENTATION.md  MCP2_PRODUCTION_CHECKLIST.md  MCP2_ROLLOUT_SUMMARY.md  Makefile  Procfile  README.md  SECURITY_FEATURES.md  TESTING_COMPLETE_FINAL.md  TESTING_COMPLETE_SUCCESS.md  TESTING_COMPLETE_SUMMARY.md  TESTING_COMPREHENSIVE_COMPLETE.md  TESTING_EXPANSION_COMPLETE.md  TESTING_FINAL_REPORT.md  TESTING_FINAL_STATUS.md  TESTING_FINAL_STATUS_COMPLETE.md  TESTING_IMPLEMENTATION_STATUS.md  TESTING_NEXT_STEPS.md  TESTING_PLAN.md  TESTING_PROGRESS_REPORT.md  TESTING_STATUS.md  TESTING_SUCCESS_SUMMARY.md  TESTING_VERIFICATION_REPORT.md  TEST_EXECUTION_SUMMARY.md  TEST_RESULTS.md  __init__.py  alembic.ini  cloudbuild.yaml  cloudrun.yaml  docker-compose.yml  env  llmhive.db  openai_provider_lazy.patch  pyproject.toml  requirements.txt  (+1 more)
llmhive/.github/workflows/: mcp2-ci.yml
llmhive/alembic/: env.py  script.py.mako
llmhive/alembic/versions/: 001_add_billing_tables.py  002_add_model_feedback.py  003_add_user_tier.py  004_add_memory_optimization.py  005_add_knowledge_encryption.py  20240305_0001_create_tasks_table.py
llmhive/app/: __init__.py  main.py
llmhive/app/api/: __init__.py  v1.py
llmhive/app/core/: __init__.py  constants.py  errors.py  logging.py  security.py  settings.py
llmhive/app/db/: __init__.py  models.py  schema.sql  session.py
llmhive/app/orchestration/: __init__.py  challenge.py  consensus.py  ensemble.py  equalizer.py  factcheck.py  memory.py  orchestrator.py  prompt_opt.py  routing.py  voting.py
llmhive/app/utils/: __init__.py  eval.py  redact.py  sampling.py  timing.py
llmhive/docs/: API.md  STAGE4_PRODUCTION_READINESS.md  mcp2_best_practices.md  openapi.json
llmhive/k8s/: deployment.yaml
llmhive/scripts/: deploy.sh  export_openapi.py  generate_types.py  pinecone_smoke_test.py
llmhive/src/llmhive/: __init__.py
llmhive/src/llmhive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llmhive/tests/: conftest.py  run_tests.sh  test_access_guard.py  test_adaptive_router.py  test_adaptive_routing.py  test_agent_executor.py  test_answer_format.py  test_answer_quality_replay_scoring.py  test_api.py  test_api_validation.py  test_auto_hrm_activation.py  test_benchmark_tool_hints.py  test_billing.py  test_capital_question.py  test_chat_api_bridge.py  test_checkout_price_resolution.py  test_clarification.py  test_clarification_manager.py  test_collaboration.py  test_config.py  test_consensus.py  test_consensus_manager.py  test_continuous_learning.py  test_conversations_sync_guard.py  test_critique_authors.py  test_db_session.py  test_deep_consensus.py  test_devops_integrations.py  test_diagnostics.py  test_dialogue.py  test_domain_packs.py  test_elite_routing_consistency.py  test_email_helpers.py  test_error_handling.py  test_fact_check.py  test_feedback_logger.py  test_flagship_pick_policy.py  test_frontier_roster_sync.py  test_gpt4_stub_fallback.py  test_gpt55_routing.py  (+68 more)
llmhive/tests/agents/: test_adversarial_agent.py  test_audio_agent.py  test_audit_agent.py  test_benchmark_agent.py  test_code_agent.py  test_personalization_agent.py  test_planning_agent.py  test_qa_agent.py
llmhive/tests/benchmarks/: test_evaluation.py  test_orchestration_performance.py
llmhive/tests/contract/: test_api_contracts.py
llmhive/tests/frontend/: test_auth.py
llmhive/tests/integration/: __init__.py  test_chat_flow.py  test_error_handling.py  test_full_orchestration.py  test_prompt_ops.py  test_routers.py  test_tool_broker_integration.py  test_verification.py
llmhive/tests/load/: locustfile.py
llmhive/tests/orchestrator/: test_aggregation.py  test_benchmark_mcq_prompt_detection.py  test_clarification.py  test_critique.py  test_elite_plus_leader_routing.py  test_fact_checking.py  test_iterative_improvement.py  test_model_routing.py  test_parallel_execution.py  test_planning.py  test_reasoning_benchmark_guardrail.py
llmhive/tests/performance/: __init__.py  test_load.py
llmhive/tests/security/: __init__.py  test_security_audit.py
llmhive/tests/systems/: test_memory.py  test_tool_integration.py
llmhive/tests/utils/: __init__.py  fixtures.py  helpers.py
(+3197 files in other folders)
