[tool.poetry]
name = "llmhive"
version = "0.1.0"
description = "LLMHIVE FastAPI service"
authors = ["LLMHIVE Team <team@llmhive.ai>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlalchemy = "^2.0.20"
pydantic = "^1.10.9"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
