[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmhive"
version = "0.1.0"
description = "LLMHIVE FastAPI service"
authors = [{name = "LLMHIVE", email = "support@llmhive.ai"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["fastapi", "llm", "backend"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI"
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "pydantic-settings>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
