[project]
name = "llmhive"
version = "0.1.0"
description = "LLMHIVE Orchestrator service"
authors = [{ name = "LLMHIVE" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "pydantic>=1.10,<2",
    "sqlalchemy[asyncio]>=1.4",
    "alembic>=1.12",
    "httpx>=0.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21", "coverage[toml]>=7.4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["llmhive/tests"]
addopts = "-q"

[tool.coverage.run]
source = ["llmhive/app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
