[project]
name = "llmhive"
version = "0.3.0"
description = "LLMHive multi-LLM orchestration service"
authors = [{ name = "LLMHive" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "python-dotenv>=1.0",
    "openai>=1.12.0",
    "httpx>=0.26",
    "tenacity>=8.2",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "coverage[toml]>=7.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["llmhive/app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["llmhive*"]

[tool.setuptools.package-dir]
"" = "src"
